--- a/assignments/temple-inn-suites/css/medium.css
+++ b/assignments/temple-inn-suites/css/medium.css
@@ -6,5 +6,14 @@
     {
         grid-template-columns: 1fr 1fr;
     }
-    
+
+    /********************************************* SERVICES PAGE CODE ***********************************/
+    .services-grid-container 
+    {
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+        justify-items: left;
+        align-items: center;
+        margin-left: 20px;
+    }
 }
